code/typescript/FactSetConcordance/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# FactSet Concordance client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v2.11.0-blue)]()
[![npm](https://img.shields.io/badge/npm-v3.1.1-orange)](https://www.npmjs.com/package/@factset/sdk-factsetconcordance/v/3.1.1)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)



The FactSet Concordance API enables Application Developers and Data Scientists to programmatically discover the FactSet Identifier for a specific Entity or Person based on attributes, such as name, URL, and location.FactSet Identifiers are mapped to industry-standard identifiers, as well as to a comprehensive set of reference data and unique content, to enhance the ability to quickly connect content sets.<p>  

 Using the submitted attributes, the FactSet Concordance API leverages FactSet’s extensive Entity Master, People, and Symbology databases to return potential candidate matches and a proposed match. The result is a concorded FactSet Identifier that can then be used as input throughout FactSet's expanding catalog of Content using our Content APIs or Standard DataFeeds.</p>
 
 <b>There are two types of workflows supported in the API:</b>
 
 <b>Entity & People Match:</b> The first workflow follows traditional API conventions in that a request is accepted and a response is returned synchronously enabling the concordance of up to 25 names in a single request. The response returns a list of 20 candidates as well as a proposed match.
 
 <b>Entity & People Match - Bulk:</b> The second workflow allows you to input a large list of names within a .CSV file in a single request. With this workflow, a task is created for uploading a set of queries. Once the task has completed, the client retrieves the concordance results through the /entity-decisions or /people-decisions endpoint. Note that in the Bulk workflow, only the matches for the records are returned. Candidates are not included.
 
 Once the service has provided a list of concorded FactSet Identifiers, you can then use our Entity Mappings and People Mappings endpoints to further review the universe of mapped identifiers or modify existing records. </p><p><b>Rate limit is set to 10 requests per second</b>.</p>
 
 Methodology Guide link: 
 [https://open.factset.com/api/public/media/download/products/documents/8ca33e81-a7da-4d77-a8cf-2b3a2e868b3d](https://open.factset.com/api/public/media/download/products/documents/8ca33e81-a7da-4d77-a8cf-2b3a2e868b3d)

 


This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2.11.0
- SDK version: 3.1.1
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

## Requirements

* Node.js >= 18

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-factsetconcordance@3.1.1
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-factsetconcordance@3.1.1
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=18. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 18
      nvm use 18
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, EntityMatchApi } = require('@factset/sdk-factsetconcordance');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new EntityMatchApi();
const name = Tesla; // String | Name of Entity to match.
const opts = {
  'country': US, // String | ISO2 country code corresponding to the entity name that is used when evaluating candidates for a match. For a list of ISO2 Country codes, visit [OA 8754](https://my.apps.factset.com/oa/pages/8754#country).
  'state': TX, // String | Two-character state code corresponding to the entity name that is used when evaluating candidates for a match. Currently, only US state codes are supported.
  'url': www.tesla.com, // String | URL corresponding to the entity name that is used when evaluating candidates for a match.
  'includeEntityType': ["PUB"], // [String] | Three-character FactSet entity type code used to filter candidates in order to determine the final match result. Only candidates with an entity type specified will be considered for the final match result. Multiple types can be entered separated by commas.   |Entity Type Code|Entity Type Description|Entity Type Code|Entity Type Description|   |---|---|---|---|   |ABS|Asset-Backed|MED|Broadcast Call Sign|   |BAS|Business Association (JP)|MUC|Mutual Fd-Closed End|   |CAC|Consolidated Accounting|MUE|Mutual Fd-ETF|   |CMD|Commodity|MUT|Mutual Fd-Open End|   |COL|College/University|NPO|Non-Profit Organization|   |CUR|Currency|OPD|Operating Division|   |ESP|Emp Stk Ownership Plan|OTH|Other|   |EXT|Extinct|PEF|Pension Fund|   |FAF|Family of Fds (VC/Pvt EQ)|PRO|Real Property|   |FND|Foundation/Endowment|PUB|Public Company|   |FNS|Financing Subsidiary/SPE|PVF|Private Eq Fd/Alt Invt|   |FRX|ForEx|PVT|Private Company|   |GOV|Government|SOV|Sovereign Wealth Fund|   |HED|Hedge Fund|SUB|Subsidiary|   |HOL|Holding Company|TRU|Trust/Trustee|   |IDX|Index|UMB|Umbrella Fund|   |VEN|Venture Capital Fund|JVT|Joint Venture| 
  'excludeEntityType': ["EXT"], // [String] | Three-character FactSet entity type code used to filter candidates in order to determine the final match result. Candidates with an entity type specified will *not* be considered for the final match result. Multiple types can be entered separated by commas.   |Entity Type Code|Entity Type Description|Entity Type Code|Entity Type Description|   |---|---|---|---| |ABS|Asset-Backed|MED|Broadcast Call Sign| |BAS|Business Association (JP)|MUC|Mutual Fd-Closed End| |CAC|Consolidated Accounting|MUE|Mutual Fd-ETF| |CMD|Commodity|MUT|Mutual Fd-Open End| |COL|College/University|NPO|Non-Profit Organization| |CUR|Currency|OPD|Operating Division| |ESP|Emp Stk Ownership Plan|OTH|Other| |EXT|Extinct|PEF|Pension Fund| |FAF|Family of Fds (VC/Pvt EQ)|PRO|Real Property| |FND|Foundation/Endowment|PUB|Public Company| |FNS|Financing Subsidiary/SPE|PVF|Private Eq Fd/Alt Invt| |FRX|ForEx|PVT|Private Company| |GOV|Government|SOV|Sovereign Wealth Fund| |HED|Hedge Fund|SUB|Subsidiary| |HOL|Holding Company|TRU|Trust/Trustee| |IDX|Index|UMB|Umbrella Fund| |VEN|Venture Capital Fund|JVT|Joint Venture| 
  'includeEntitySubType': ["PR"], // [String] | Two-character FactSet entity subtype code used to filter candidates in order to determine the final match result. Only candidates with an entity subtype specified will be considered for the final match result. Multiple types can be entered separated by commas.   |Entity Subtype Code|Entity Subtype Description|Entity Subtype Code|Entity Subtype Description|   |---|---|---|---|   |AR|Arbitrage|IC|Investment Company|   |BM|Bank Investment Division|IN|Insurance Company|   |BR|Broker|MF|Mutual Fund Manager|   |CP|Corporate|ML|Master Ltd Part|   |CU|Custodial|MM|Market Maker|   |FF|Fund of Funds Manager|PB|Private Banking/Wealth Mgmt|   |FH|Fund of Hedge Funds Manager|PF|Pension Fund Manager|   |FO|Foundation/Endowment Manager|PP|Real Estate Manager|   |FS|Fund Distributor|RE|Research Firm|   |FU|Fund|SB|Subsidiary Branch|   |FY|Family Office|ST|Stock Borrowing/Lending|   |GV|Govt (Fed/Local/Agency)|SV|Sovereign Wealth Manager|   |HF|Hedge Fund Manager|VC|Venture Capital/Pvt Equity|   |IA|Investment Adviser|   |IB|Investment Banking| 
  'excludeEntitySubType': ["HF"], // [String] | Two-character FactSet entity subtype code used to filter candidates in order to determine the final match result. Candidates with an entity subtype specified will not be considered for the final match result. Multiple types can be entered separated by commas. |Entity Subtype Code|Entity Subtype Description|Entity Subtype Code|Entity Subtype Description| |---|---|---|---| |AR|Arbitrage|IC|Investment Company| |BM|Bank Investment Division|IN|Insurance Company| |BR|Broker|MF|Mutual Fund Manager| |CP|Corporate|ML|Master Ltd Part| |CU|Custodial|MM|Market Maker| |FF|Fund of Funds Manager|PB|Private Banking/Wealth Mgmt| |FH|Fund of Hedge Funds Manager|PF|Pension Fund Manager| |FO|Foundation/Endowment Manager|PP|Real Estate Manager| |FS|Fund Distributor|RE|Research Firm| |FU|Fund|SB|Subsidiary Branch| |FY|Family Office|ST|Stock Borrowing/Lending| |GV|Govt (Fed/Local/Agency)|SV|Sovereign Wealth Manager| |HF|Hedge Fund Manager|VC|Venture Capital/Pvt Equity| |IA|Investment Adviser| |IB|Investment Banking| 
  'includeParent': false, // Boolean | Flag to include parent entities in the list of candidates. This parameter does not influence the match result.
  'bbgFigi': BBG000N9P426, // String | Input identifiers for the Bloomberg Listing/Regional/Security ID symbol type.
  'bbgTicker': TSLA UW, // String | Input identifiers for the Bloomberg Listing and Regional Ticker symbol Type.
  'bic': TSLAUS66, // String | Input identifiers for the BICCode - Bank Indentification Code symbol Type.
  'cik': 1318605, // String | Input identifiers for the CIK - Edgar Central Index Keys symbol type.
  'crd': CRD, // String | Input identifiers for the CRD - Central Registration Depository symbol type.
  'creditsafe': DE00001447, // String | Creditsafe Identifier
  'crunchbase': 9d94b6c1-8b80-4169-8fd5-115bee96cde0, // String | Crunchbase Identifier
  'cusip': 88160R101, // String | Input identifiers for the CUSIP symbol type.
  'ein': 912197729, // String | Input identifiers for the EIN - Employer Identification Number symbol type.
  'factsetId': 006XY7-E, // String | Input identifiers for the type FactSet Identifier - FactSet -E,-S,-R, -L Permanent Identifier symbol type.
  'fitch': FitchCreditRating, // String | Input identifiers for the Fitch - Fitch Ratings symbol type.
  'gvkey': GVKey, // String | Input identifiers for the type GVKEY - Compustat Global Company Key symbol type.
  'gvkeyIid': GVKeyIssueIdentifier, // String | Input identifiers for the type GVKEY+IID - Compustat Global Company Key and Issue Identifier symbol type.
  'isin': US88160R1014, // String | Input identifiers for the ISIN - International Securities Identification Number symbol type.
  'jcn': JCN, // String | Input identifiers for the type JCN - Japanese Corporate Number symbol type.
  'lei': 54930043XZGB27CTOV49, // String | Input identifiers for the LEI - Legal Entity Identifier symbol type
  'lxid': LXID, // String | Input identifiers for the type LXID - Markit Syndicated Loan Identifier symbol type.
  'md': 823642219, // String | Input identifiers for the Moody's Ratings Identifier type.
  'redCode': RedCode, // String | Input identifiers for the type Red Code - Markit Reference Entity Identifier symbol type.
  'rssd': FederalReserveRSSDIdentifier, // String | Input identifiers for the RSSD - Federal Reserve RSSD symbol typ.
  'sedol': B616C79, // String | Input identifiers for the SEDOL symbol type.
  'spr': 562703, // String | Input identifiers for the Price Ticker symbol type.
  'ticker': PriceTicker, // String | Input identifiers for the Price Ticker symbol type.
  'tickerExchange': TSLA-NAS, // String | Input identifiers for the TickerExchange.
  'tickerRegion': TSLA-US, // String | Input identifiers for the TickerRegion.
  'ukch': UKCompanyHouse, // String | Input identifiers for the UKCH - UK Company House symbol type.
  'valoren': VALOR, // String | Input identifiers for the Valoren (\"Valor\") symbol type.
  'wkn': A1CX3T, // String | Input identifiers for the WKN - German Securities symbol type.
  'candidatesCount': 40 // Number | Maximum number of candidates to be returned. Parent entities, when includeParent is true, are not included in this count. <p>*minimum - 20*</p> <p>*maximum - 100*</p>
};

// Call api endpoint
apiInstance.getEntityMatch(name, opts).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Using a Proxy

To add a HTTP proxy for the API client, you can set the proxyUrl for the ApiClient instance:

```javascript
const { ApiClient } = require('@factset/sdk-factsetconcordance');

const apiClient = ApiClient.instance;
apiClient.setProxyUrl('http://username:password@proxy.example.com:8080');
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/content*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*factsetconcordance.EntityMatchApi* | [**getEntityMatch**](docs/EntityMatchApi.md#getEntityMatch) | **GET** /factset-concordance/v2/entity-match | Get Entity Candidates and Matches for a single name and attributes.
*factsetconcordance.EntityMatchApi* | [**getEntityMatchForList**](docs/EntityMatchApi.md#getEntityMatchForList) | **POST** /factset-concordance/v2/entity-match | Get a list of Entity Candidates and Matches for a requested list of up to 25 names and attributes.
*factsetconcordance.EntityMatchBulkApi* | [**getEntityDecisions**](docs/EntityMatchBulkApi.md#getEntityDecisions) | **GET** /factset-concordance/v2/entity-decisions | Get the decisions of matches for the requested taskId.
*factsetconcordance.EntityMatchBulkApi* | [**getEntityTaskForList**](docs/EntityMatchBulkApi.md#getEntityTaskForList) | **POST** /factset-concordance/v2/entity-task | Input a file with names and attributes, creating a taskId.
*factsetconcordance.EntityMatchBulkApi* | [**getEntityTaskStatus**](docs/EntityMatchBulkApi.md#getEntityTaskStatus) | **GET** /factset-concordance/v2/entity-task-status | Gets the status of the requested taskId or all tasks for a User
*factsetconcordance.MappingsApi* | [**getEntityMappingDeleteForList**](docs/MappingsApi.md#getEntityMappingDeleteForList) | **POST** /factset-concordance/v2/entity-mapping-delete | Deletes mapping specified by the client.
*factsetconcordance.MappingsApi* | [**getEntityMappingForList**](docs/MappingsApi.md#getEntityMappingForList) | **POST** /factset-concordance/v2/entity-mapping | Saves a single-mapping specified by the client.
*factsetconcordance.MappingsApi* | [**getEntityUniverse**](docs/MappingsApi.md#getEntityUniverse) | **GET** /factset-concordance/v2/entity-universe | Retrieve all saved mappings within a requested universe
*factsetconcordance.MappingsApi* | [**getEntityUniverseForList**](docs/MappingsApi.md#getEntityUniverseForList) | **POST** /factset-concordance/v2/entity-universe | Retrieve all saved mappings within a requested universe or large list of client ids
*factsetconcordance.PeopleMappingApi* | [**getPeopleMappingDeleteForList**](docs/PeopleMappingApi.md#getPeopleMappingDeleteForList) | **POST** /factset-concordance/v2/people-mapping-delete | Deletes mapping specified by the client.
*factsetconcordance.PeopleMappingApi* | [**getPeopleMappingForList**](docs/PeopleMappingApi.md#getPeopleMappingForList) | **POST** /factset-concordance/v2/people-mapping | Saves a single-mapping specified by the client.
*factsetconcordance.PeopleMappingApi* | [**getPeopleUniverse**](docs/PeopleMappingApi.md#getPeopleUniverse) | **GET** /factset-concordance/v2/people-universe | Retrieve all saved mappings within a requested universe
*factsetconcordance.PeopleMappingApi* | [**getPeopleUniverseForList**](docs/PeopleMappingApi.md#getPeopleUniverseForList) | **POST** /factset-concordance/v2/people-universe | Retrieve all saved mappings within a requested universe or large list of client ids
*factsetconcordance.PeopleMatchApi* | [**getPeopleMatch**](docs/PeopleMatchApi.md#getPeopleMatch) | **GET** /factset-concordance/v2/people-match | Find potential people matches given a person&#39;s name.People matches can be retrieved using person&#39;s name and other attributes like firstname, middlename and lastname.
*factsetconcordance.PeopleMatchApi* | [**getPeopleMatchForList**](docs/PeopleMatchApi.md#getPeopleMatchForList) | **POST** /factset-concordance/v2/people-match | Find potential people matches given a person&#39;s name.
*factsetconcordance.PeopleMatchBulkApi* | [**getPeopleDecisions**](docs/PeopleMatchBulkApi.md#getPeopleDecisions) | **GET** /factset-concordance/v2/people-decisions | Get the decisions of matches for the requested taskId.
*factsetconcordance.PeopleMatchBulkApi* | [**getPeopleTaskForList**](docs/PeopleMatchBulkApi.md#getPeopleTaskForList) | **POST** /factset-concordance/v2/people-task | Create a People Concordance Task.
*factsetconcordance.PeopleMatchBulkApi* | [**getPeopleTaskStatus**](docs/PeopleMatchBulkApi.md#getPeopleTaskStatus) | **GET** /factset-concordance/v2/people-task-status | Get the Status of the People Tasks.
*factsetconcordance.SnowflakeApi* | [**getSnowflakeEntityMatchForList**](docs/SnowflakeApi.md#getSnowflakeEntityMatchForList) | **POST** /factset-concordance/v2/snowflake-entity-match | Perform an entity search and return a snowflake-friendly response. Up to 25 Names per request.
*factsetconcordance.SnowflakeApi* | [**snowflakeEntityMappingPost**](docs/SnowflakeApi.md#snowflakeEntityMappingPost) | **POST** /factset-concordance/v2/snowflake-entity-mapping | Save entity mappings to a universe
*factsetconcordance.UniversesApi* | [**getEntityUniverseStatistics**](docs/UniversesApi.md#getEntityUniverseStatistics) | **GET** /factset-concordance/v2/entity-universe-statistics | Get statistics on a given universe
*factsetconcordance.UniversesApi* | [**getUniverseForList**](docs/UniversesApi.md#getUniverseForList) | **POST** /factset-concordance/v2/universe | Create a new universe
*factsetconcordance.UniversesApi* | [**getUniverseStatistics**](docs/UniversesApi.md#getUniverseStatistics) | **GET** /factset-concordance/v2/universe-statistics | Get statistics on a given universe
*factsetconcordance.UniversesApi* | [**getUniverses**](docs/UniversesApi.md#getUniverses) | **GET** /factset-concordance/v2/universes | Fetch metadata for universes
*factsetconcordance.UniversesApi* | [**getUpdateUniverseForList**](docs/UniversesApi.md#getUpdateUniverseForList) | **POST** /factset-concordance/v2/update-universe | Update metadata for an existing universe


## Documentation for Models

 - [factsetconcordance.CreateUniverseRequest](docs/CreateUniverseRequest.md)
 - [factsetconcordance.EntityDecisionsResponse](docs/EntityDecisionsResponse.md)
 - [factsetconcordance.EntityMapping](docs/EntityMapping.md)
 - [factsetconcordance.EntityMappingDeleteRequest](docs/EntityMappingDeleteRequest.md)
 - [factsetconcordance.EntityMappingDeleteResponse](docs/EntityMappingDeleteResponse.md)
 - [factsetconcordance.EntityMappingRequest](docs/EntityMappingRequest.md)
 - [factsetconcordance.EntityMappingResponse](docs/EntityMappingResponse.md)
 - [factsetconcordance.EntityMatch](docs/EntityMatch.md)
 - [factsetconcordance.EntityMatchRequest](docs/EntityMatchRequest.md)
 - [factsetconcordance.EntityMatchRequestInput](docs/EntityMatchRequestInput.md)
 - [factsetconcordance.EntityMatchesResponse](docs/EntityMatchesResponse.md)
 - [factsetconcordance.EntityResponse](docs/EntityResponse.md)
 - [factsetconcordance.EntityTaskResponse](docs/EntityTaskResponse.md)
 - [factsetconcordance.EntityTaskStatus](docs/EntityTaskStatus.md)
 - [factsetconcordance.EntityTaskStatusResponse](docs/EntityTaskStatusResponse.md)
 - [factsetconcordance.EntityUniverseRequest](docs/EntityUniverseRequest.md)
 - [factsetconcordance.EntityUniverseResponse](docs/EntityUniverseResponse.md)
 - [factsetconcordance.EntityUniverseStatisticsResponse](docs/EntityUniverseStatisticsResponse.md)
 - [factsetconcordance.ErrorResponse](docs/ErrorResponse.md)
 - [factsetconcordance.ErrorResponseSubErrors](docs/ErrorResponseSubErrors.md)
 - [factsetconcordance.MapStatus](docs/MapStatus.md)
 - [factsetconcordance.PeopleDecisions](docs/PeopleDecisions.md)
 - [factsetconcordance.PeopleDecisionsResponse](docs/PeopleDecisionsResponse.md)
 - [factsetconcordance.PeopleMapping](docs/PeopleMapping.md)
 - [factsetconcordance.PeopleMappingDeleteResponse](docs/PeopleMappingDeleteResponse.md)
 - [factsetconcordance.PeopleMappingRequest](docs/PeopleMappingRequest.md)
 - [factsetconcordance.PeopleMappingResponse](docs/PeopleMappingResponse.md)
 - [factsetconcordance.PeopleMatch](docs/PeopleMatch.md)
 - [factsetconcordance.PeopleMatchRequest](docs/PeopleMatchRequest.md)
 - [factsetconcordance.PeopleMatchRequestInput](docs/PeopleMatchRequestInput.md)
 - [factsetconcordance.PeopleMatchesResponse](docs/PeopleMatchesResponse.md)
 - [factsetconcordance.PeopleTask](docs/PeopleTask.md)
 - [factsetconcordance.PeopleTaskResponse](docs/PeopleTaskResponse.md)
 - [factsetconcordance.PeopleTaskStatus](docs/PeopleTaskStatus.md)
 - [factsetconcordance.PeopleTaskStatusResponse](docs/PeopleTaskStatusResponse.md)
 - [factsetconcordance.PeopleUniverseRequest](docs/PeopleUniverseRequest.md)
 - [factsetconcordance.PeopleUniverseResponse](docs/PeopleUniverseResponse.md)
 - [factsetconcordance.SnowflakeEntityMappingRequest](docs/SnowflakeEntityMappingRequest.md)
 - [factsetconcordance.SnowflakeEntityMappingResponse](docs/SnowflakeEntityMappingResponse.md)
 - [factsetconcordance.SnowflakeEntityMatchRequest](docs/SnowflakeEntityMatchRequest.md)
 - [factsetconcordance.SnowflakeEntityMatchResponse](docs/SnowflakeEntityMatchResponse.md)
 - [factsetconcordance.Universe](docs/Universe.md)
 - [factsetconcordance.UniverseMeta](docs/UniverseMeta.md)
 - [factsetconcordance.UniverseMetaResponse](docs/UniverseMetaResponse.md)
 - [factsetconcordance.UniverseStatistics](docs/UniverseStatistics.md)
 - [factsetconcordance.UniverseStatisticsResponse](docs/UniverseStatisticsResponse.md)
 - [factsetconcordance.UniversesResponse](docs/UniversesResponse.md)
 - [factsetconcordance.UpdateUniverseRequest](docs/UpdateUniverseRequest.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
